<resources>
    <string name="app_name">StyleruApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="profile">Профиль</string>
    <string name="projects">Проекты</string>
    <string name="departments">Отделы</string>
    <string name="events">Мероприятия</string>
    <string name="people">Люди</string>
    <string name="timeline">Таймлайн</string>
    <string name="filter">Фильтр</string>

    <string name="err_no_internet">Ошибка. Проверьте подключение к интернету</string>

    <string name="go_future_negative">ПОЙДУ</string>
    <string name="go_future_positive">ИДУ</string>
    <string name="go_past_negative">НЕ ХОДИЛ</string>
    <string name="go_past_positive">ХОДИЛ</string>
    <string name="go_wait">ПОДОЖДИТЕ</string>

    <string name="until">до</string>
    <string name="hint_people">Поиск по имени</string>
    <string name="hint_projects">Поиск по названию или имени менеджера</string>
    <string name="subdepartments">Направления</string>
    <string name="experience">Опыт работы</string>
    <string name="university">ВУЗ</string>
    <string name="settings">Настройки</string>
    <string name="edit">Редактировать</string>
    <string name="all">Все</string>
    <string name="err_event_state_change_fail">Не удалось записаться на событие, попробуйте еще раз</string>
    <string name="event_signed">Вы записались на событие</string>
    <string name="event_unsigned">Вы отписались от события</string>
    <string name="decline">ОТМЕНИТЬ</string>
    <string name="settings_sync_success">Настройки успешно синхронизированны с сервером</string>
    <string name="settings_sync_fail">Не удалось синхронизировать настройки с сервером</string>
    <string name="progressbar_loading">ЗАГРУЗКА...</string>
    <string name="user_name">Rinat Zubaidullin</string>
    <string name="approve">ОДОБРИТЬ</string>
    <string name="vacancies">Вакансии</string>
    <string name="vacancy_request_submitted">Заявка успешно отправлена</string>
    <string name="vacancy_request_removed">Заявка успешно отменена</string>
    <string name="vacancy_approved">принят(а) на проект</string>
    <string name="vacancy_recommended">рекомендован(а) на проект</string>
    <string name="vacancy_recommended_false">более не рекомендован(а) на проект</string>
    <string name="insufficent_permissions">Недостаточно прав для совершения данной операции</string>
    <string name="feature_not_implemented">Данный функционал не реализован в текущей версии приложения</string>

    <string-array name="project_options">
        <item>Все проекты</item>
        <item>Текущие</item>
        <item>Завершенные</item>
        <item>С вакансиями</item>
    </string-array>
</resources>
