<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_calendar"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_avatar"
            android:title="@string/people" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_avatar"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_departments"
            android:icon="@drawable/ic_location"
            android:title="@string/departments" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_greater_calendar"
            android:title="@string/projects" />

</menu>
